# flour

./: .gitignore  Cargo.toml  README.md  SPECIFICATION.md  agb_tap.json
.github/workflows/: build.yml  release.yml
src/: bccad.rs  bytestream_addon.rs  conversion.rs  error.rs  lib.rs  main.rs
src/bxcad/: bccad.rs  brcad.rs  mod.rs  qol.rs  serde_impl.rs
