[package]
name = "flour"
authors = ["patataofcourse"]
version = "2.0.0-dev"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
bytestream = "0.4.0"
clap = { version = "3.1.6", features = ["derive"] }
serde-semver = "0.2.1"
semver = "1.0.7"