[package]
name = "flour"
description = "Serializes and deserializes BCCAD / BRCAD files to and from JSON"
authors = ["patataofcourse"]
version = "2.0.0-pre2"
edition = "2021"

readme = "README.md"
license = "LGPL-3"
repository = "https://github.com/patataofcourse/flour.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
bytestream = "0.4.0"
clap = { version = "3.1.6", features = ["derive"] }
serde-semver = "0.2.1"
semver = "1.0.7"
encoding_rs = "0.8"
thiserror = "1.0"