[package]
name = "flour"
description = "Serializes and deserializes BCCAD / BRCAD files to and from JSON"
authors = ["patataofcourse"]
version = "2.0.0"
edition = "2021"

readme = "README.md"
license = "LGPL-3"
repository = "https://github.com/patataofcourse/flour.git"

[dependencies]
bytestream = "0.4.0"

serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
json_comments = "0.2"

semver = "1.0.7"
serde-semver = "0.2.1"

clap = { version = "3.1.6", features = ["derive"], optional = true }

encoding_rs = "0.8"
thiserror = "1.0"

[[bin]]
name = "flour"
required-features = ["modder_qol", "clap"]

[features]
default = ["modder_qol"]
modder_qol = []
clap = ["dep:clap"]